fixed join message

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -82,9 +82,9 @@ event-role-deleted-2=\n\
   this is an automated message please not answer on this chat\n\
   every message will be ignored
 event-join=\
-  Hello here is testbot v1.1 thanks for your usage\n\
+  Hello here is emoji-er v1.0 thanks for your usage\n\
   i've automatically added modroles that fits my parameters\n\
-  please check them by hand whit **tb!modrole list** command.
+  please check them by hand whit **:emoji.modrole: list** command.
 
 #errors messages starts there
 
