added toggle option

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -31,6 +31,14 @@ modrole-auto=\
 modrole-list=\
   Active modroles:
 
+#---toggle---#
+toggle-head=\
+  Now my external emojis are
+toggle-enabled=\
+  ENABLED
+toggle-disabled=\
+  DISABLED
+
 
 #this section gonna be long
 
@@ -68,6 +76,12 @@ help-def-unregister=\
   removes your server from emoji server list\n\
   Usage:\n\
   :emoji.unregister:
+help-def-toggle=\
+  toggles the status of emoji listener\n\
+  ENABLED : custom emojis will be replaced whit effective emojis\n\
+  DISABLED: custom emojis will be ignored\n\
+  Usage:\n\
+  :emoji.toggle:
 help-description=\
   allows user to send custom emoji from other servers even whitout nitro\n\
   the format is similar to normal emojis\n\
