added status,enable,disable options

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -34,10 +34,31 @@ modrole-list=\
 #---toggle---#
 toggle-head=\
   Now my external emojis are
-toggle-enabled=\
+
+#---status---#
+status-head=\
+  Printing status:
+status-emoji=\
+  Emojis are
+status-registered=\
+  This server is
+status-title=\
+  with prefix:
+status-modroles=\
+  Active modroles count:
+status-disabled=\
+  Disabled servers count:
+
+
+#---general---#
+enabled=\
   ENABLED
-toggle-disabled=\
+disabled=\
   DISABLED
+registered=\
+  REGISTERED
+unregistered=\
+  UNREGISTERED
 
 
 #this section gonna be long
@@ -57,7 +78,7 @@ help-def-modrole=\
   Usage: :emoji.modrole: <action> [RoleMention]\n\
   Actions: add, remove, clear, auto, list
 help-def-list=\
-  prints the list of usable emojis from the server whit perfix [prefix]\n\
+  prints the list of usable emojis from the server with perfix [prefix]\n\
   use this syntax to print the emoji\n\
   Usage:\n\
   :emoji.list: [prefix]
@@ -78,12 +99,26 @@ help-def-unregister=\
   :emoji.unregister:
 help-def-toggle=\
   toggles the status of emoji listener\n\
-  ENABLED : custom emojis will be replaced whit effective emojis\n\
+  ENABLED : custom emojis will be replaced with effective emojis\n\
   DISABLED: custom emojis will be ignored\n\
   Usage:\n\
   :emoji.toggle:
+help-def-status=\
+  shows the status of the server\n\
+  Usage:\n\
+  :emoji.status:
+help-def-enable=\
+  allow users to use emojis from a specific server\n\
+  (by default all servers are enabled)\n\
+  Usage:\n\
+  :emoji.enable: [server prefix]
+help-def-disable=\
+  deny users to use emojis from this a specific server\n\
+  (disabled servers gonna be shown ~~Barred~~ on servers list)\n\
+  Usage:\n\
+  :emoji.disable: [prefix]
 help-description=\
-  allows user to send custom emoji from other servers even whitout nitro\n\
+  allows user to send custom emoji from other servers even without nitro\n\
   the format is similar to normal emojis\n\
   :[server prefix].[emoji name]:
 
@@ -98,7 +133,7 @@ event-role-deleted-2=\n\
 event-join=\
   Hello here is emoji-er v1.0 thanks for your usage\n\
   i've automatically added modroles that fits my parameters\n\
-  please check them by hand whit **:emoji.modrole: list** command.
+  please check them by hand with **:emoji.modrole: list** command.
 
 #errors messages starts there
 
@@ -122,6 +157,6 @@ error-emoji-unregistered=\
 error-emoji-title-used=\
   error this server prefix has yet been registered
 error-emoji-list=\
-  please add a server prefix or list servers whit **emoji servers**
+  please add a server prefix or list servers with **emoji servers**
 error-title-not_usable=\
   error you cannot set \\"emoji\\" as prefix or a word that contains it
