minor string fixes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -49,7 +49,13 @@ status-modroles=\
 status-disabled=\
   Disabled servers count:
 
-
+#----disable/enable---#
+disable-success=\
+  The server has been correctly disabled\n\
+  See all guilds with :emoji.servers:
+enable-success=\
+  The server has been correctly enabled\n\
+  See all guilds with :emoji.servers:
 #---general---#
 enabled=\
   ENABLED
