added logger and improved log style and message typos

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -163,6 +163,7 @@ error-emoji-unregistered=\
 error-emoji-title-used=\
   error this server prefix has yet been registered
 error-emoji-list=\
-  please add a server prefix or list servers with **emoji servers**
+  please add a server prefix\n\
+  list servers with **:emoji.servers:**
 error-title-not_usable=\
   error you cannot set \\"emoji\\" as prefix or a word that contains it
