fixed missing resources

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -146,8 +146,6 @@ event-join=\
 
 #---errors---#
 
-error-wrong-syntax=\
-  Wrong syntax!
 error-user-permission=\
   Error you're not allowed to do this!
 error-modrole-missing=\
@@ -167,3 +165,7 @@ error-emoji-list=\
   list servers with **:emoji.servers:**
 error-title-not_usable=\
   error you cannot set \\"emoji\\" as prefix or a word that contains it
+error-disabled-404=\
+  The server was not found
+error-enable-404=\
+  The server was not found
