fixed illegal char in titles

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -163,8 +163,10 @@ error-emoji-title-used=\
 error-emoji-list=\
   please add a server prefix\n\
   list servers with **:emoji.servers:**
-error-title-not_usable=\
+error-title-emoji=\
   error you cannot set \\"emoji\\" as prefix or a word that contains it
+error-title-unallowed=\
+  error you cannot use ' or " in the prefix
 error-disabled-404=\
   The server was not found
 error-enable-404=\
