added log daemon on a prefixed chat, bypass for owner, failed to improve formatting for server list

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -56,6 +56,13 @@ disable-success=\
 enable-success=\
   The server has been correctly enabled\n\
   See all guilds with :emoji.servers:
+
+#---log---#
+log-started=\
+  logger daemon started
+log-stopped=\
+  logger daemon stopped
+
 #---general---#
 enabled=\
   ENABLED
@@ -74,6 +81,8 @@ help-title=\
   Help for emoji-er:
 help-footer=\
   The help is dynamic (different for every user) example: mod commands are shown only to mods
+help-footer-owner=\
+  Welcome mattymatty, Owner of the bot
 
 help-def-help=\
   shows this help
@@ -127,6 +136,8 @@ help-description=\
   allows user to send custom emoji from other servers even without nitro\n\
   the format is similar to normal emojis\n\
   :[server prefix].[emoji name]:
+help-def-log=\
+  starts or stops a echo-er routine for a specific guild log in the local channel
 
 #help ended here
 
@@ -171,3 +182,20 @@ error-disabled-404=\
   The server was not found
 error-enable-404=\
   The server was not found
+
+#--log-errors--#
+
+error-log-non_mutual=\
+  error this server exists but i'm not in its user list
+error-log-wrong=\
+  error this server does not exist
+error-log-non_id=\
+  error this is not a valid id [18 digits are required]
+error-log-no_id=\
+  please enter a server id
+error-log-active=\
+  error a daemon is already running in this chat, please stop it whit :emoji.end:
+error-log-channel=\
+  this chat does not allow logs, ask admin for info
+error-log-end=\
+  error no daemon is running in this chat
