added listen on ping daemon

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,7 +16,7 @@ emoji-list=\
   listing usable emojis:
 emoji-server-list=\
   listing emoji servers:\n\
-  [prefix] [common name]
+  [server] [complete name]
 
 #---modrole---#
 modrole-add=\
@@ -52,16 +52,20 @@ status-disabled=\
 #----disable/enable---#
 disable-success=\
   The server has been correctly disabled\n\
-  See all guilds with :emoji.servers:
+  See all servers with :emoji.servers:
 enable-success=\
   The server has been correctly enabled\n\
-  See all guilds with :emoji.servers:
+  See all servers with :emoji.servers:
 
 #---log---#
 log-started=\
   logger daemon started
 log-stopped=\
   logger daemon stopped
+
+#---listen--#
+listen-enabled=\
+  listener daemon started please do :emoji.ping: in your server
 
 #---general---#
 enabled=\
@@ -82,7 +86,7 @@ help-title=\
 help-footer=\
   The help is dynamic (different for every user) example: mod commands are shown only to mods
 help-footer-owner=\
-  Welcome mattymatty, Owner of the bot
+  Hello mattymatty, bot owner
 
 help-def-help=\
   shows this help
@@ -93,20 +97,21 @@ help-def-modrole=\
   Usage: :emoji.modrole: <action> [RoleMention]\n\
   Actions: add, remove, clear, auto, list
 help-def-list=\
-  prints the list of usable emojis from the server with perfix [prefix]\n\
+  prints the list of usable emojis from the server with name [server]\n\
   use this syntax to print the emoji\n\
   Usage:\n\
-  :emoji.list: [prefix]
+  :emoji.list: [server]
 help-def-servers=\
   print a list of all avaiable servers\n\
-  formatted as "[prefix]  [server common name]"\n\
+  formatted as "[server]  [complete name]"\n\
   Usage:\n\
   :emoji.servers:
 help-def-register=\
   allows other servers to use your emoji\n\
-  the <prefix> must be unique\n\
+  the <name> must be unique\n\
+  it must be less than 10 characters\n\
   Usage:\n\
-  :emoji.register: <prefix>
+  :emoji.register: <name>
 help-def-unregister=\
   the opposite of register\n\
   removes your server from emoji server list\n\
@@ -126,18 +131,29 @@ help-def-enable=\
   allow users to use emojis from a specific server\n\
   (by default all servers are enabled)\n\
   Usage:\n\
-  :emoji.enable: [server prefix]
+  :emoji.enable: [server]
 help-def-disable=\
   deny users to use emojis from this a specific server\n\
   (disabled servers gonna be shown ~~Barred~~ on servers list)\n\
   Usage:\n\
-  :emoji.disable: [prefix]
+  :emoji.disable: [server]
 help-description=\
   allows user to send custom emoji from other servers even without nitro\n\
   the format is similar to normal emojis\n\
-  :[server prefix].[emoji name]:
+  :[server].[emoticon]:
 help-def-log=\
-  starts or stops a echo-er routine for a specific guild log in the local channel
+  starts a echo-er routine for a specific guild log in the local channel\n\
+  Usage:\n\
+  :emoji.log: [ID]
+help-def-end=\
+  stop a echo-er daemon\n\
+  Usage:\n\
+  :emoji.end:
+help-def-listen=\
+  starts a listener daemon that waits for a ping in one of the mutual server\n\
+  then prints icon, name and id of that server\n\
+  Usage:\n\
+  :emoji.listen:
 
 #help ended here
 
@@ -166,7 +182,7 @@ error-modrole-exists=\
 error-emoji-registered=\
   error this server is already registered
 error-long-title=\
-  error too long emoji prefix
+  error too long server name
 error-emoji-unregistered=\
   error this server is not registered
 error-emoji-title-used=\
@@ -175,13 +191,15 @@ error-emoji-list=\
   please add a server prefix\n\
   list servers with **:emoji.servers:**
 error-title-emoji=\
-  error you cannot set \\"emoji\\" as prefix or a word that contains it
+  error you cannot set \\"emoji\\" as name or a word that contains it
 error-title-unallowed=\
-  error you cannot use ' or " in the prefix
+  error you can only use letters[A-Z,a-z] or digits[0-9]
 error-disabled-404=\
   The server was not found
 error-enable-404=\
   The server was not found
+error-listen=\
+  error a listener daemon is yet running
 
 #--log-errors--#
 
