--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -57,11 +57,11 @@ enable-success=\
   The server has been correctly enabled\n\
   See all servers with :emoji.servers:
 
-#---log---#
-log-started=\
-  logger daemon started
-log-stopped=\
-  logger daemon stopped
+#---console---#
+console-started=\
+  console daemon started
+console-stopped=\
+  console daemon stopped
 
 #---listen--#
 listen-enabled=\
@@ -141,19 +141,35 @@ help-description=\
   allows user to send custom emoji from other servers even without nitro\n\
   the format is similar to normal emojis\n\
   :[server].[emoticon]:
-help-def-log=\
-  starts a echo-er routine for a specific guild log in the local channel\n\
+help-def-console=\
+  starts a console daemon in the current chat that prints the connected server log\n\
+  and allows admins to trigger remote commands\n\
+  (for a list of commands simply type "help")\n\
   Usage:\n\
-  :emoji.log: [ID]
-help-def-end=\
-  stop a echo-er daemon\n\
-  Usage:\n\
-  :emoji.end:
+  :emoji.console: [server id]\n\
+  the server id could be found whit developer option or by:
 help-def-listen=\
   starts a listener daemon that waits for a ping in one of the mutual server\n\
   then prints icon, name and id of that server\n\
   Usage:\n\
   :emoji.listen:
+
+#conole help
+
+help-console-def=\
+  Listing allowed console commands:\n\
+  end:           ends the console session\n\
+  status:        prints the status of connected server\n\
+  disable:       disables the mentioned server in the connected one (same syntax as normal)\n\
+  enable:        enables the mentioned server in the connected one  (same syntax as normal)\n\
+  register:      registers the connected guild                      (same syntax as normal)\n\
+  unregister:    unregisters the connected guild\n\
+  modrole:       triggers modrole commands in the connected guild   (same syntax as normal)\n\
+  toggle:        Enables/Disables emoji repost in the connected guild\n\
+  whoami:        Prints the connected server name infos\n\
+  help:          Prints this help\n\
+  \n\
+  All the commands have effect only in the connected guild and do not require any particular syntax
 
 #help ended here
 
@@ -164,7 +180,7 @@ event-role-deleted-2=\n\
   this is an automated message please not answer on this chat\n\
   every message will be ignored
 event-join=\
-  Hello here is emoji-er v1.0 thanks for your usage\n\
+  Hello here is emoji-er v1.6.0 thanks for your usage\n\
   i've automatically added modroles that fits my parameters\n\
   please check them by hand with **:emoji.modrole: list** command.
 
@@ -201,19 +217,15 @@ error-enable-404=\
 error-listen=\
   error a listener daemon is yet running
 
-#--log-errors--#
+#--console-errors--#
 
-error-log-non_mutual=\
-  error this server exists but i'm not in its user list
-error-log-wrong=\
-  error this server does not exist
-error-log-non_id=\
+error-console-non_mutual=\
+  error this server is not in my server list
+error-console-non_id=\
   error this is not a valid id [18 digits are required]
-error-log-no_id=\
+error-console-no_id=\
   please enter a server id
-error-log-active=\
+error-console-active=\
   error a daemon is already running in this chat, please stop it whit :emoji.end:
-error-log-channel=\
-  this chat does not allow logs, ask admin for info
-error-log-end=\
-  error no daemon is running in this chat
+error-console-channel=\
+  this chat does not allow consoles, ask admin for info
