v 1.7.11 - commit 4 minor help improvements

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -83,6 +83,10 @@ unregistered=\
 #---help---#
 help-title=\
   Help for emoji-er:
+help-description=\
+  allows user to send custom emoji from other servers even without nitro\n\
+  the format is similar to normal emojis\n\
+  :[server].[emoticon]:
 help-footer=\
   The help is dynamic (different for every user) example: mod commands are shown only to mods
 help-footer-owner=\
@@ -107,7 +111,7 @@ help-def-servers=\
   Usage:\n\
   :emoji.servers:
 help-def-register=\
-  allows other servers to use your emoji\n\
+  allows other servers to use your emojis\n\
   the <name> must be unique\n\
   it must be less than 10 characters\n\
   Usage:\n\
@@ -133,14 +137,16 @@ help-def-enable=\
   Usage:\n\
   :emoji.enable: [server]
 help-def-disable=\
-  deny users to use emojis from this a specific server\n\
+  deny users to use emojis from a specific server\n\
   (disabled servers gonna be shown ~~Barred~~ on servers list)\n\
   Usage:\n\
   :emoji.disable: [server]
-help-description=\
-  allows user to send custom emoji from other servers even without nitro\n\
-  the format is similar to normal emojis\n\
-  :[server].[emoticon]:
+help-last=\
+  this is the base help with command description,\n\
+  for major help on usage and registration please visit\n\
+  the support server: https://discord.gg/X2eWwn8
+
+
 help-def-console=\
   starts a console daemon in the current chat that prints the connected server log\n\
   and allows admins to trigger remote commands\n\
