--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -216,6 +216,8 @@ error-title-emoji=\
   error you cannot set \\"emoji\\" as name or a word that contains it
 error-title-unallowed=\
   error you can only use letters[A-Z,a-z] or digits[0-9]
+error-disabled=\
+  error this server is yet disabled
 error-disabled-404=\
   The server was not found
 error-enable-404=\
