--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -212,6 +212,9 @@ error-emoji-title-used=\
 error-emoji-list=\
   please add a server prefix\n\
   list servers with **:emoji.servers:**
+error-list-404=\
+  this prefix is not in my database\n\
+  possibly mistyped?
 error-title-emoji=\
   error you cannot set \\"emoji\\" as name or a word that contains it
 error-title-unallowed=\
