--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,10 @@
 #---ping---#
 pong=\
   Pong!
+#---invite---#
+invite=\
+  visit emoji-er bot page:\n\
+  https://discordbots.org/bot/431502619031240705
 
 #---emoji---#
 emoji-guild-registered=\
@@ -96,6 +100,8 @@ help-def-help=\
   shows this help
 help-def-ping=\
   answers pong (userfull for speed test and alive check)
+help-def-invite=\
+  prints the link to the bot page (and to the invite button)
 help-def-modrole=\
   manages the roles allowed to use mod commands\n\
   Usage: :emoji.modrole: <action> [RoleMention]\n\
