--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,6 +20,8 @@ emoji-list=\
   listing usable emojis:
 emoji-server-list=\
   listing emoji servers:\n\
+  + means enabled\n\
+  - means disabled\n\
   [server]       [complete name]
 
 #---modrole---#
