--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -23,6 +23,10 @@ emoji-server-list=\
   + means enabled\n\
   - means disabled\n\
   [+-][server]     [complete name]
+emoji-react-success=\
+  hurry up adding your reaction\n\
+  this message and the emoticons will blow up in\n\
+  {time} seconds
 
 #---modrole---#
 modrole-add=\
@@ -92,7 +96,7 @@ help-title=\
 help-description=\
   allows user to send custom emoji from other servers even without nitro\n\
   the format is similar to normal emojis\n\
-  :[server].[emoticon]:
+  **:[server].[emoticon]:**
 help-footer=\
   The help is dynamic (different for every user) example: mod commands are shown only to mods
 help-footer-owner=\
@@ -106,49 +110,49 @@ help-def-invite=\
   prints the link to the bot page (and to the invite button)
 help-def-modrole=\
   manages the roles allowed to use mod commands\n\
-  Usage: :emoji.modrole: <action> [RoleMention]\n\
+  Usage: **:emoji.modrole: <action> [RoleMention]**\n\
   Actions: add, remove, clear, auto, list
 help-def-list=\
   prints the list of usable emojis from the server with name [server]\n\
   use this syntax to print the emoji\n\
   Usage:\n\
-  :emoji.list: [server]
+  **:emoji.list: [server]**
 help-def-servers=\
   print a list of all avaiable servers\n\
   formatted as "[server]  [complete name]"\n\
   Usage:\n\
-  :emoji.servers:
+  **:emoji.servers:**
 help-def-register=\
   allows other servers to use your emojis\n\
   the <name> must be unique\n\
   it must be less than 10 characters\n\
   Usage:\n\
-  :emoji.register: <name>
+  **:emoji.register: <name>**
 help-def-unregister=\
   the opposite of register\n\
   removes your server from emoji server list\n\
   Usage:\n\
-  :emoji.unregister:
+  **:emoji.unregister:**
 help-def-toggle=\
   toggles the status of emoji listener\n\
   ENABLED : custom emojis will be replaced with effective emojis\n\
   DISABLED: custom emojis will be ignored\n\
   Usage:\n\
-  :emoji.toggle:
+  **:emoji.toggle:**
 help-def-status=\
   shows the status of the server\n\
   Usage:\n\
-  :emoji.status:
+  **:emoji.status:**
 help-def-enable=\
   allow users to use emojis from a specific server\n\
   (by default all servers are enabled)\n\
   Usage:\n\
-  :emoji.enable: [server]
+  **:emoji.enable: [server]**
 help-def-disable=\
   deny users to use emojis from a specific server\n\
   (disabled servers gonna be shown ~~Barred~~ on servers list)\n\
   Usage:\n\
-  :emoji.disable: [server]
+  **:emoji.disable: [server]**
 help-last=\
   this is the base help with command description,\n\
   for major help on usage and registration please visit\n\
@@ -160,13 +164,26 @@ help-def-console=\
   and allows admins to trigger remote commands\n\
   (for a list of commands simply type "help")\n\
   Usage:\n\
-  :emoji.console: [server id]\n\
+  **:emoji.console: [server id]**\n\
   the server id could be found whit developer option or by:
 help-def-listen=\
   starts a listener daemon that waits for a ping in one of the mutual server\n\
   then prints icon, name and id of that server\n\
   Usage:\n\
-  :emoji.listen:
+  **:emoji.listen:**
+
+help-def-react=\
+  add a custom reaction\n\
+  this command will add the requested reaction to the last **10 messages**\n\
+  this reactions will stay for **5 seconds** then they'll **disappear**\n\
+  in this time u should be able to add your own\n\
+  Usage:\n\
+  **:emoji.react: [emoji] (#channel)**\n\n\
+  [emoji] is the reaction emote in emoji-er format ( **this is required** )\n\
+  (#channel) is the channel mention of where the bot should react ( **this is optional** )
+
+
+
 
 #conole help
 
@@ -235,6 +252,8 @@ error-enable-404=\
   The server was not found
 error-listen=\
   error a listener daemon is yet running
+error-emoji-404=\
+  error i cant find this emoticon, please retry
 
 #--console-errors--#
 
