--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,6 +24,7 @@ emoji-server-list=\
   - means disabled\n\
   [+-][server]     [complete name]
 emoji-react-success=\
+  {user}\n\
   hurry up adding your reaction\n\
   this message and the emoticons will blow up in\n\
   {time} seconds
