--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -68,15 +68,19 @@ enable-success=\
   The server has been correctly enabled\n\
   See all servers with :emoji.servers:
 
-#---console---#
-console-started=\
-  console daemon started
-console-stopped=\
-  console daemon stopped
-
-#---listen--#
-listen-enabled=\
-  listener daemon started please do :emoji.ping: in your server
+#---support----
+support-msg=\
+  hi i'm  The Matty ( mattymatty#9621 ), i'm the bot creator\n\
+  if u want to help me developing the bot visit:\n\
+  <https://donatebot.io/checkout/428163245753499653>
+#---other------
+other-msg=\
+  hi i'm  The Matty ( mattymatty#9621 ), i'm the bot creator\n\
+  this are my other BOTs:\n\
+  accountant : keep user roles in memory even on user leave and rejoin\n\
+  <link>\n\n\
+  roleGroup : create custom commands for adding or removing listed roles ( completely configurable )\n\
+  <link>
 
 #---general---#
 enabled=\
@@ -157,7 +161,8 @@ help-def-disable=\
 help-last=\
   this is the base help with command description,\n\
   for major help on usage and registration please visit\n\
-  the support server: https://discord.gg/X2eWwn8
+  the support server: https://discord.gg/X2eWwn8\n\n\
+  if u want to support me visit: https://donatebot.io/checkout/428163245753499653
 
 
 help-def-console=\
@@ -183,25 +188,12 @@ help-def-react=\
   [emoji] is the reaction emote in emoji-er format ( **this is required** )\n\
   (#channel) is the channel mention of where the bot should react ( **this is optional** )
 
+help-def-support=\
+  send a small message from bot creator with the support link
+help-def-other=\
+  send a small message from bot creator with a list ot the other bots from him
 
 
-
-#conole help
-
-help-console-def=\
-  Listing allowed console commands:\n\
-  end:           ends the console session\n\
-  status:        prints the status of connected server\n\
-  disable:       disables the mentioned server in the connected one (same syntax as normal)\n\
-  enable:        enables the mentioned server in the connected one  (same syntax as normal)\n\
-  register:      registers the connected guild                      (same syntax as normal)\n\
-  unregister:    unregisters the connected guild\n\
-  modrole:       triggers modrole commands in the connected guild   (same syntax as normal)\n\
-  toggle:        Enables/Disables emoji repost in the connected guild\n\
-  whoami:        Prints the connected server name infos\n\
-  help:          Prints this help\n\
-  \n\
-  All the commands have effect only in the connected guild and do not require any particular syntax
 
 #help ended here
 
